@@ -3,7 +3,7 @@
 // dispatch.h: Rcpp R/C++ interface class library -- macros for dispatch
 //
 // Copyright (C) 2012 - 2016  Dirk Eddelbuettel and Romain Francois
-// Copyright (C) 2016         Dirk Eddelbuettel, Romain Francois, Artem Klevtsov and Nathan Russell
+// Copyright (C) 2016 - 2025  Dirk Eddelbuettel, Romain Francois, Artem Klevtsov and Nathan Russell
 //
 // This file is part of Rcpp.
 //
@@ -23,14 +23,12 @@
 #ifndef Rcpp__macros__dispatch_h
 #define Rcpp__macros__dispatch_h
 
-//  The variadic macros below incorporate techniques presented by 
+//  The variadic macros below incorporate techniques presented by
 //  Stack Overflow user Richard Hansen in this answer
 //
-//      http://stackoverflow.com/a/11172679/1869097 
+//      http://stackoverflow.com/a/11172679/1869097
 //
 //  and are necessary to avoid the use of GNU compiler extensions.
-
-#ifdef RCPP_USING_CXX11
 
 #define ___RCPP_HANDLE_CASE___(___RTYPE___, ___FUN___, ___RCPPTYPE___, ...)                         \
   case ___RTYPE___:                                                                                 \
@@ -76,33 +74,5 @@
                 TWOORMORE, TWOORMORE, TWOORMORE, TWOORMORE, ONE, throwaway)
 #define RCPP_MACRO_SELECT_25TH(a1, a2, a3, a4, a5, a6, a7, a8, a9, a10, a11, a12,                   \
     a13, a14, a15, a16, a17, a18, a19, a20, a21, a22, a23, a24, a25, ...)           a25
-
-#else
-
-#define ___RCPP_HANDLE_CASE___(___RTYPE___, ___FUN___, ___OBJECT___,           \
-                               ___RCPPTYPE___)                                 \
-  case ___RTYPE___:                                                            \
-    return ___FUN___(::Rcpp::___RCPPTYPE___<___RTYPE___>(___OBJECT___));
-
-#define ___RCPP_RETURN___(__FUN__, __SEXP__, __RCPPTYPE__)                     \
-  SEXP __TMP__ = __SEXP__;                                                     \
-  switch (TYPEOF(__TMP__)) {                                                   \
-    ___RCPP_HANDLE_CASE___(INTSXP, __FUN__, __TMP__, __RCPPTYPE__)             \
-    ___RCPP_HANDLE_CASE___(REALSXP, __FUN__, __TMP__, __RCPPTYPE__)            \
-    ___RCPP_HANDLE_CASE___(RAWSXP, __FUN__, __TMP__, __RCPPTYPE__)             \
-    ___RCPP_HANDLE_CASE___(LGLSXP, __FUN__, __TMP__, __RCPPTYPE__)             \
-    ___RCPP_HANDLE_CASE___(CPLXSXP, __FUN__, __TMP__, __RCPPTYPE__)            \
-    ___RCPP_HANDLE_CASE___(STRSXP, __FUN__, __TMP__, __RCPPTYPE__)             \
-    ___RCPP_HANDLE_CASE___(VECSXP, __FUN__, __TMP__, __RCPPTYPE__)             \
-    ___RCPP_HANDLE_CASE___(EXPRSXP, __FUN__, __TMP__, __RCPPTYPE__)            \
-  default:                                                                     \
-    throw std::range_error("Not a vector");                                    \
-  }
-
-#define RCPP_RETURN_VECTOR(_FUN_, _SEXP_)                                      \
-  ___RCPP_RETURN___(_FUN_, _SEXP_, Vector)
-#define RCPP_RETURN_MATRIX(_FUN_, _SEXP_)                                      \
-  ___RCPP_RETURN___(_FUN_, _SEXP_, Matrix)
-#endif
 
 #endif
